--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,19 @@
 // Placez vos paramètres dans ce fichier pour remplacer les paramètres par défaut et les paramètres utilisateur.
 {
+    "ruby.lint": {
+        "reek": true,
+        "rubocop": {
+            "lint": true, //enable all lint cops.
+            "rails": true //Run extra rails cops
+        },
+        "ruby": true, //Runs ruby -wc
+        "fasterer": true,
+        "debride": true,
+        "ruby-lint": true
+    },
+    "ruby.locate": {
+        "include": "**/*.rb",
+        "exclude": "{**/@(test|spec|tmp|.*),**/@(test|spec|tmp|.*)/**,**/*_spec.rb}"
+    }
+    
 }
