--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,9 @@
             "type": "Ruby",
             "request": "launch",
             "cwd": "${workspaceRoot}",
-            "program": "${workspaceRoot}/main.rb"
+            "program": "${workspaceRoot}/main.rb",
+            "useBundler": true,
+            "pathToBundler": "/home/tristan/.rbenv/shims/bundler" // linux rbenv
         },
         {
             "name": "Listen for rdebug-ide",
