--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: ruby
 sudo: false
+cache: bundler
 rvm:
-  - 2.5
+  - 2.5.0
 notifications:
   email: false
 before_install:
-  - gem install bundler
+  - gem update --system
+  - gem update bundler
+script: bundle exec rake $TASK
+env:
+- TASK=test
+- TASK=spec
