--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -77,6 +77,27 @@
             ]
         },
         {
+            "name": "bundle exec rake spec - all",
+            "type": "Ruby",
+            "request": "launch",
+            "cwd": "${workspaceRoot}",
+            "program": "${workspaceRoot}/bin/rake",
+            "useBundler": true,
+            "showDebuggerOutput": true,
+            "env": {
+                "DISABLE_PROXY": true,
+                "SSL_VERIFY_PEER": false,
+                "USE_VCR": false,
+                "PVE_URL": "https://172.26.49.146:8006/api2/json",
+                "PVE_PATH": "/access/ticket",
+                "PVE_USERNAME": "root@pam",
+                "PVE_PASSWORD": "proxmox01"
+            },
+            "args": [
+                "spec"
+            ]
+        },
+        {
             "name": "Cucumber",
             "type": "Ruby",
             "request": "launch",
