--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ before_install:
 - gem update --system
 - gem update bundler
 before_script:
-- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
-  > ./cc-test-reporter
+- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
 - chmod +x ./cc-test-reporter
 - "./cc-test-reporter before-build"
 script: bundle exec rake $TASK
