--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,7 +44,6 @@
                 "SSL_VERIFY_PEER": false,
                 "USE_VCR": false,
                 "PVE_URL": "https://172.26.49.146:8006/api2/json",
-                "PVE_PATH": "/access/ticket",
                 "PVE_USERNAME": "root@pam",
                 "PVE_PASSWORD": "proxmox01"
             },
@@ -66,7 +65,6 @@
                 "SSL_VERIFY_PEER": false,
                 "USE_VCR": false,
                 "PVE_URL": "https://172.26.49.146:8006/api2/json",
-                "PVE_PATH": "/access/ticket",
                 "PVE_USERNAME": "root@pam",
                 "PVE_PASSWORD": "proxmox01"
             },
@@ -89,12 +87,14 @@
                 "SSL_VERIFY_PEER": false,
                 "USE_VCR": false,
                 "PVE_URL": "https://172.26.49.146:8006/api2/json",
-                "PVE_PATH": "/access/ticket",
                 "PVE_USERNAME": "root@pam",
                 "PVE_PASSWORD": "proxmox01"
             },
             "args": [
-                "spec"
+                "spec",
+                "-I",
+                "${workspaceRoot}",
+                "${file}"
             ]
         },
         {
