--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,3 @@
-test:
-  stage: test
-  script:
-  - apt-get update -qy
-  - apt-get install -y nodejs
-  - bundle install --binstubs
-  - bundle exec rake spec
-
-
 dependency_scanning:
   image: docker:stable
   variables:
@@ -23,3 +14,28 @@ dependency_scanning:
         "registry.gitlab.com/gitlab-org/security-products/dependency-scanning:$SP_VERSION" /code
   artifacts:
     paths: [gl-dependency-scanning-report.json]
+
+rubocop:
+  script:
+    - rubocop
+
+test-ruby-2.3.7:
+  image: ruby:2.3.7
+  script:
+    - bundle install --binstubs
+    - bundle exec rake test
+    - bundle exec rake spec
+
+test-ruby-2.4.4:
+  image: ruby:2.4.4
+  script:
+    - bundle install --binstubs
+    - bundle exec rake test
+    - bundle exec rake spec
+
+test-ruby-2.5.1:
+  image: ruby:2.5.1
+  script:
+    - bundle install --binstubs
+    - bundle exec rake test
+    - bundle exec rake spec
