--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 // Placez vos paramètres dans ce fichier pour remplacer les paramètres par défaut et les paramètres utilisateur.
 {
-    "ruby.pathToBundler": "/home/tristan/.asdf/shims/bundle",
+    "ruby.pathToBundler": "~/.asdf/shims/bundle",
     "ruby.useBundler": true,
-    "solargraph.commandPath": "/home/tristan/.asdf/shims/solargraph",
-    "solargraph.bundlerPath": "/home/tristan/.asdf/shims/bundle",
+    "solargraph.commandPath": "~/.asdf/shims/solargraph",
+    "solargraph.bundlerPath": "~/.asdf/shims/bundle",
     "workbench.startupEditor": "newUntitledFile",
     "workbench.iconTheme": "vscode-icons",
     "git.autofetch": true,
@@ -25,11 +25,11 @@
         "include": "**/*.erb,**/*.rb,**/vendor/*.*",
         "exclude": "{**/@(test|spec|tmp|.*),**/@(test|spec|tmp|.*)/**,**/*_spec.rb}"
     },
-    "ruby.interpreter.commandPath": "/home/tristan/.asdf/shims/ruby",
-    "ruby.pathToBundler": "/home/tristan/.asdf/shims/bundle",
+    "ruby.interpreter.commandPath": "~/.asdf/shims/ruby",
+    "ruby.pathToBundler": "~/.asdf/shims/bundle",
     "ruby.useBundler": true,
-    "solargraph.commandPath": "/home/tristan/.asdf/shims/solargraph",
-    "solargraph.bundlerPath": "/home/tristan/.asdf/shims/bundle",
+    "solargraph.commandPath": "~/.asdf/shims/solargraph",
+    "solargraph.bundlerPath": "~/.asdf/shims/bundle",
     "gitlens.advanced.messages": {
         "suppressCommitHasNoPreviousCommitWarning": false,
         "suppressCommitNotFoundWarning": false,
