--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ rvm:
 - 2.5.0
 - 2.6.2
 notifications:
+before_install:
+  - gem update --system
+  - gem update bundler
 before_script:
 - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
 - chmod +x ./cc-test-reporter
