chore: CI add test coverage

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,9 @@ jobs:
       run: bundle install
     - name: Run tests
       run: bundle exec rake test spec audit
+    - name: Coverage
+      uses: paambaati/codeclimate-action@v2.2.4
+      env:
+        CC_TEST_REPORTER_ID: 1b8ec457c0c30f927f785b4a080eca5164140c5b84716f64809b5ce2f57f3554
+      with:
+        coverageCommand: npm run coverage
