--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,4 @@ jobs:
     - name: Publish code coverage
       run: |
         export GIT_BRANCH="${GITHUB_REF/refs\/heads\//}"
-        ./cc-test-reporter upload-coverage -i tests/ -r ${{secrets.CC_TEST_REPORTER_ID}}
+        ./cc-test-reporter upload-coverage -i tests/.resultset.json -r ${{secrets.CC_TEST_REPORTER_ID}}
