--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Upload results for coverage
       uses: actions/upload-artifact@v1
       with:
-        name: tests
+        name: coverage
         path: coverage/
       
   coverage:
@@ -29,12 +29,14 @@ jobs:
     - name: Download tests result from test
       uses: actions/download-artifact@v1
       with:
-        name: tests
+        name: coverage
     - name: Install Code Climate test-reporter
       run: |
         curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
         chmod +x ./cc-test-reporter
+    - name: Format code coverage
+      run: ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.json coverage/.resultset.json 
     - name: Publish code coverage
-      run: |
-        export GIT_BRANCH="${GITHUB_REF/refs\/heads\//}"
-        ./cc-test-reporter upload-coverage -i tests/.resultset.json -r ${{secrets.CC_TEST_REPORTER_ID}}
+      env:
+        GIT_BRANCH: "${GITHUB_REF/refs\/heads\//}"
+      run: ./cc-test-reporter upload-coverage -r ${{secrets.CC_TEST_REPORTER_ID}}
