chore(CI): fix syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,9 @@ jobs:
         curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
         chmod +x ./cc-test-reporter
     - name: Format code coverage
-      run: ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.json coverage/.resultset.json 
+      run: |
+        ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.json coverage/.resultset.json 
     - name: Publish code coverage
-      env:
-        GIT_BRANCH: "${GITHUB_REF/refs\/heads\//}"
-      run: ./cc-test-reporter upload-coverage -r ${{secrets.CC_TEST_REPORTER_ID}}
+      run: |
+        export GIT_BRANCH="${GITHUB_REF/refs\/heads\//}"
+        ./cc-test-reporter upload-coverage -r ${{secrets.CC_TEST_REPORTER_ID}}
