chore(CI): add en git coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,9 @@ jobs:
         chmod +x ./cc-test-reporter
     - name: Format code coverage
       run: |
-        ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.json coverage/.resultset.json 
+        export GIT_BRANCH="${GITHUB_REF/refs\/heads\//}"
+        ./cc-test-reporter format-coverage --debug -t simplecov -o coverage/codeclimate.json coverage/.resultset.json 
     - name: Publish code coverage
       run: |
         export GIT_BRANCH="${GITHUB_REF/refs\/heads\//}"
-        ./cc-test-reporter upload-coverage -r ${{secrets.CC_TEST_REPORTER_ID}}
+        ./cc-test-reporter upload-coverage --debug -r ${{secrets.CC_TEST_REPORTER_ID}}
