--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,3 +49,20 @@ jobs:
       run: |
         export GIT_COMMITTED_AT="$(date +%s)"
         ./cc-test-reporter upload-coverage -d -r ${{secrets.CC_TEST_REPORTER_ID}}
+
+  publish:
+    needs: [ test ]
+    name: publish
+    runs-on: ubuntu-latest
+    if: contains(github.ref, '/tags/') && contains(github.ref, '-release')
+    steps:
+      - name: Publish to RubyGems
+        env:
+          GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_AUTH_TOKEN}}
+        run: |
+          mkdir -p $HOME/.gem
+          touch $HOME/.gem/credentials
+          chmod 0600 $HOME/.gem/credentials
+          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+          gem build *.gemspec
+          gem push *.gem
