--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]    
 
 jobs:
   test:
@@ -54,7 +58,7 @@ jobs:
     needs: [ test ]
     name: publish
     runs-on: ubuntu-latest
-    if: contains(github.ref, '/tags/') && contains(github.ref, '-release')
+    if: contains(github.ref, '/tags/v')
     steps:
       - uses: actions/checkout@v2
       - name: Set up Ruby 2.6
