chore(CI): add release trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ master ]    
+    branches: [ master ] 
+  release:
+    types: [created]
 
 jobs:
   test:
