ci: :construction_worker: add semantic release

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,26 +1,24 @@
-name: CI
+name: test
 
 on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ master ] 
-  release:
-    types: [created]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6
+        ruby-version: '2.7'
+        bundler-cache: true
     - name: Install dependencies
       run: bundle install
     - name: Run tests
-      run: bundle exec rake test spec audit
+      run: bundle exec rake spec audit
     - name: Upload results for coverage
       uses: actions/upload-artifact@v1
       with:
@@ -32,7 +30,7 @@ jobs:
     name: coverage
     runs-on: ubuntu-latest
     steps: 
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Download tests result from test
       uses: actions/download-artifact@v1
       with:
@@ -55,25 +53,3 @@ jobs:
       run: |
         export GIT_COMMITTED_AT="$(date +%s)"
         ./cc-test-reporter upload-coverage -d -r ${{secrets.CC_TEST_REPORTER_ID}}
-
-  publish:
-    needs: [ test ]
-    name: publish
-    runs-on: ubuntu-latest
-    if: contains(github.ref, '/tags/v')
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Ruby 2.6
-        uses: actions/setup-ruby@v1
-        with:
-          version: 2.6.x
-      - name: Publish to RubyGems
-        env:
-          GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_AUTH_TOKEN}}
-        run: |
-          mkdir -p $HOME/.gem
-          touch $HOME/.gem/credentials
-          chmod 0600 $HOME/.gem/credentials
-          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          gem build *.gemspec
-          gem push *.gem
