--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,14 @@
+inherit_from:
+  - .rubocop_todo.yml
+require: 
+  - rubocop-minitest
+  - rubocop-rake
+  - rubocop-rspec
+
 AllCops:
-  TargetRubyVersion: 2.4
-  Include:
-    - '**/Rakefile'
+  TargetRubyVersion: 2.5 
+  NewCops: disable
   Exclude:
-    - 'bin/**/*'
+    - 'examples/**/*'
     - 'vendor/**/*'
-    - 'coverage/**/*'
-    - '.bundle/**/*'
-    - '.vscode/**/*'
-    - '**/*.gemspec'
-    - 'Gemfile'
-    - 'spec/**/*'
+    - 'bin/**/*'
